ingress-tls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ing
spec:
  tls:
    - hosts:
        - learnwithgvr.com
      secretName: sec-gvr
  rules:
    - host: learnwithgvr.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: caddy-svc
                port:
                  number: 80
